# cosmic-noise

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  io.github.bqwrongway.CosmicNoise.yaml  justfile
.cargo/: config.toml
.github/workflows/: release.yml
i18n/de/: cosmic_noise.ftl
i18n/en/: cosmic_noise.ftl
i18n/sv/: cosmic_noise.ftl
resources/: app.desktop  app.metainfo.xml  io.github.bq-wrongway.CosmicNoise.desktop
scripts/: build-windows.ps1
src/: app.rs  audio.rs  config.rs  errors.rs  files.rs  i18n.rs  lib.rs  main.rs  messages.rs  models.rs  ui.rs
src/ui/: components.rs  styles.rs  view.rs
src/utils/: dragwin.rs  files.rs  mod.rs  sine_wave_loading.rs  ui_helpers.rs  wave_loader.rs
wix/: main.wxs
