[package]
name = "cosmic-noise"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "Applet for playing background noise, heavility inspired by Blanket"
repository = "https://github.com/bq-wrongway/cosmic-noise"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.9.3"
rust-embed = "8.5.0"
kira = "0.10.1"
dirs = "5.0.1"
walkdir = "2.5.0"
log = "0.4.25"
env_logger = "0.11.6"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "applet",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]
